Hours code frequency analyse

--- a/RepositoryParser/RepositoryParser/View/HourActivityViews/HourActivityContentProviderView.xaml
+++ b/RepositoryParser/RepositoryParser/View/HourActivityViews/HourActivityContentProviderView.xaml
@@ -9,6 +9,8 @@
              xmlns:resw="clr-namespace:RepositoryParser.Properties"
              xmlns:imageButton="clr-namespace:RepositoryParser.Controls.ImageButton;assembly=RepositoryParser.Controls"
              xmlns:hourActivityViewModels="clr-namespace:RepositoryParser.ViewModel.HourActivityViewModels"
+             xmlns:hourActivityCodeFrequency="clr-namespace:RepositoryParser.ViewModel.HourActivityViewModels.HourActivityCodeFrequency"
+             xmlns:hourActivityCodeFrequency1="clr-namespace:RepositoryParser.View.HourActivityViews.HourActivityCodeFrequency"
              mc:Ignorable="d" 
              d:DesignHeight="600" d:DesignWidth="600"
              DataContext="{Binding Source={StaticResource Locator}, Path=HourActivityContentProvider}"
@@ -21,6 +23,10 @@
         <!--Files count of commits-->
         <DataTemplate DataType="{x:Type hourActivityViewModels:HourActivityFilesAnalyseViewModel}">
            <local:HourActivityFilesAnalyseView/>
+        </DataTemplate>
+        <!--Code frequency-->
+        <DataTemplate DataType="{x:Type hourActivityCodeFrequency:HourCodeFrequencyViewModel}">
+            <hourActivityCodeFrequency1:HourCodeFrequencyView/>
         </DataTemplate>
         <!--Conventers-->
         <conventers:ViewModelBaseToVisibilityConventer x:Key="ViewModelBaseToVisibilityConventer"/>
@@ -55,6 +61,18 @@
                     Foreground="Black"
                     ImageSource="../../Assets/Icons/PNG_Gray/Poll Topic-100.png"
                     Text="{x:Static resw:Resources.CountOfCommits}"
+                    Height="45"/>
+                <imageButton:ImageButton
+                    Command="{Binding OpenCodeFrequencyCommand}"
+                    x:Name="Btn2" 
+                    BorderBrush="{StaticResource LightGray}"
+                    BorderThickness="0,0,0,0.5"
+                    ImageHeight="32"
+                    ImageWidth="32"
+                    Background="Transparent"
+                    Foreground="Black"
+                    ImageSource="../../Assets/Icons/PNG_Gray/Code-100.png"
+                    Text="{x:Static resw:Resources.CountOfLines}"
                     Height="45"/>
                 <imageButton:ImageButton
                     Command="{Binding OpenFilesAnalyseCommand}" 
