--- a/RepositoryParser/RepositoryParser/View/UsersActivityViews/UsersActivityCodeFrequency/UserActivityCodeFrequencyView.xaml
+++ b/RepositoryParser/RepositoryParser/View/UsersActivityViews/UsersActivityCodeFrequency/UserActivityCodeFrequencyView.xaml
@@ -10,6 +10,7 @@
              xmlns:usersActivityCodeFrequency1="clr-namespace:RepositoryParser.View.UsersActivityViews.UsersActivityCodeFrequency"
              xmlns:extensions="clr-namespace:RepositoryParser.Controls.Extensions;assembly=RepositoryParser.Controls"
              xmlns:enums="clr-namespace:RepositoryParser.Helpers.Enums"
+             xmlns:circleHeaderButton="clr-namespace:RepositoryParser.Controls.CircleHeaderButton;assembly=RepositoryParser.Controls"
              mc:Ignorable="d" 
              d:DesignHeight="600" d:DesignWidth="600"
              DataContext="{Binding Source={StaticResource Locator},Path=UsersCodeFrequency}"
@@ -116,5 +117,18 @@
             Grid.RowSpan="2"
             IsDataLoadingFlag="{Binding IsLoading,UpdateSourceTrigger=PropertyChanged}"
             Text="{x:Static resw:Resources.AnalysingDataMessage}"/>
+        <DockPanel Grid.Row="1" HorizontalAlignment="Left" Margin="0">
+            <circleHeaderButton:CircleHeaderButton 
+                CommandParameter="{Binding ElementName=Root, Path=DataContext}"
+                Command="{Binding ExportFileCommand}"
+                ImageSource="../../../Assets/Icons/PNG_DarkGray/Export-100.png"
+                ToolTip="{x:Static resw:Resources.ExportToFileButton}"
+                Height="56"
+                Width="56"
+                ImageHeight="28" 
+                ImageWidth="28"
+                BorderBrush="{StaticResource AppMainColor}"
+                />
+        </DockPanel>
     </Grid>
 </UserControl>
