--- a/RepositoryParser/RepositoryParser/View/DayActivityViews/DayActivityCodeFrequency/DayActivityCodeFrequencyView.xaml
+++ b/RepositoryParser/RepositoryParser/View/DayActivityViews/DayActivityCodeFrequency/DayActivityCodeFrequencyView.xaml
@@ -18,6 +18,8 @@
     <UserControl.Resources>
         <conventers:BoolToVisibilityConverter x:Key="BoolToVisibilityConverter"/>
         <conventers:CountOfRepositoriesToVisibilityConventer x:Key="CountOfRepositoriesToVisibilityConventer"/>
+        <conventers:IntegerToBooleanConventer x:Key="IntegerToBooleanConventer"/>
+        <conventers:ChartTypeToVisibilityConventer x:Key="ChartTypeToVisibilityConventer"/>
     </UserControl.Resources>
 
     <Grid>
@@ -118,12 +120,26 @@
             Grid.RowSpan="2"
             IsDataLoadingFlag="{Binding IsLoading,UpdateSourceTrigger=PropertyChanged}"
             Text="{x:Static resw:Resources.AnalysingDataMessage}"/>
-        <DockPanel Grid.Row="1" HorizontalAlignment="Left" Margin="0">
+        <DockPanel
+            Grid.Row="1"
+            HorizontalAlignment="Left" 
+            Margin="0"
+            IsEnabled="{Binding CountOfSelectedRepositories, Converter={StaticResource IntegerToBooleanConventer}}">
             <circleHeaderButton:CircleHeaderButton 
                 CommandParameter="{Binding ElementName=Root, Path=DataContext}"
                 Command="{Binding ExportFileCommand}"
                 ImageSource="../../../Assets/Icons/PNG_DarkGray/Export-100.png"
                 ToolTip="{x:Static resw:Resources.ExportToFileButton}"
+                Height="56"
+                Width="56"
+                ImageHeight="28" 
+                ImageWidth="28"
+                BorderBrush="{StaticResource AppMainColor}"
+                />
+            <circleHeaderButton:CircleHeaderButton 
+                Command="{Binding SwitchChartTypeCommand}"
+                ImageSource="../../../Assets/Icons/PNG_DarkGray/Switch On-100.png"
+                ToolTip="{x:Static resw:Resources.SwitchChartType}"
                 Height="56"
                 Width="56"
                 ImageHeight="28" 
