--- a/RepositoryParser/RepositoryParser/View/HourActivityViews/HourActivityChartView.xaml
+++ b/RepositoryParser/RepositoryParser/View/HourActivityViews/HourActivityChartView.xaml
@@ -14,13 +14,15 @@
              xmlns:conventers="clr-namespace:RepositoryParser.Conventers"
              xmlns:controls="http://metro.mahapps.com/winfx/xaml/controls"
              xmlns:metroLoadingProgressRing="clr-namespace:RepositoryParser.Controls.MetroLoadingProgressRing;assembly=RepositoryParser.Controls"
+             xmlns:enum="clr-namespace:RepositoryParser.Core.Enum;assembly=RepositoryParser.Core"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300"
              DataContext="{Binding Source={StaticResource Locator}, Path=HourActivity}"
              x:Name="Root">
     <UserControl.Resources>
         <conventers:CountOfRepositoriesToVisibilityConventer x:Key="CountOfRepositoriesToVisibilityConventer"/>
-        <conventers:BoolToVisibilityConverter x:Key="BoolToVisibilityConverter"/>
+        <conventers:IntegerToBooleanConventer x:Key="IntegerToBooleanConventer"/>
+        <conventers:ChartTypeToVisibilityConventer x:Key="ChartTypeToVisibilityConventer"/>
     </UserControl.Resources>
     
     <Grid>
@@ -55,8 +57,12 @@
                         <RowDefinition Height="*"/>
                         <RowDefinition Height="Auto"/>
                     </Grid.RowDefinitions>
-
+                    <!--Primary Chart-->
                     <metroChart:StackedColumnChart
+                        Visibility="{Binding Path=CurrentChartType, 
+                                                Converter={StaticResource ChartTypeToVisibilityConventer}, 
+                                                ConverterParameter={x:Static enum:ChartType.Primary}}"
+                        Grid.Row="0"
                         x:Name="ChartViewInstance"
                         ChartTitle=""
                         ChartSubTitle=""
@@ -65,9 +71,30 @@
                         ChartMargin="0"
                         Background="Transparent"
                         ChartLegendVisibility="Visible"
-                        Palette="{StaticResource RepositoryAnalyserGradientPalette}"
+                        Palette="{StaticResource RepositoryAnalyserGradientPalette}"/>
+                    <!--Secondary Chart-->
+                    <metroChart:StackedColumn100Chart
+                        Visibility="{Binding Path=CurrentChartType, 
+                                                Converter={StaticResource ChartTypeToVisibilityConventer}, 
+                                                ConverterParameter={x:Static enum:ChartType.Secondary}}"
+                        Grid.Row="0"
+                        x:Name="ChartViewInstance2"
+                        ChartTitle=""
+                        ChartSubTitle=""
+                        Padding="0"
+                        ChartBorderThickness="1"
+                        ChartMargin="0"
+                        Background="Transparent"
+                        ChartLegendVisibility="Visible"
+                        Palette="{StaticResource RepositoryAnalyserGradientPalette}"/>
+                    <!--Legend-->
+                    <metroChart:Legend
+                        Grid.Row="1" 
+                        ItemsSource="{Binding ChartLegendItems}"
+                        Visibility="{Binding Path=CurrentChartType, 
+                                                Converter={StaticResource ChartTypeToVisibilityConventer}, 
+                                                ConverterParameter={x:Static enum:ChartType.Primary}}"
                         />
-                    <metroChart:Legend Grid.Row="1" ItemsSource="{Binding ChartLegendItems}"/>
                 </Grid>
             </TabItem>
             <TabItem Header="{x:Static resw:Resources.List}">
@@ -103,12 +130,25 @@
             Text="{x:Static resw:Resources.AnalysingDataMessage}"
             IsDataLoadingFlag="{Binding Path=IsLoading, UpdateSourceTrigger=PropertyChanged}"/>
 
-        <DockPanel Grid.Row="1" HorizontalAlignment="Left" Margin="0">
+        <DockPanel
+            Grid.Row="1" 
+            HorizontalAlignment="Left"
+            Margin="0"
+            IsEnabled="{Binding CountOfSelectedRepositories, Converter={StaticResource IntegerToBooleanConventer}}">
             <circleHeaderButton:CircleHeaderButton 
                 CommandParameter="{Binding ElementName=Root, Path=DataContext}"
                 Command="{Binding ExportFileCommand}"
                 ImageSource="../../Assets/Icons/PNG_DarkGray/Export-100.png"
                 ToolTip="{x:Static resw:Resources.ExportToFileButton}"
+                Height="56"
+                Width="56"
+                ImageHeight="28" 
+                ImageWidth="28"
+                BorderBrush="{StaticResource AppMainColor}"/>
+            <circleHeaderButton:CircleHeaderButton 
+                Command="{Binding SwitchChartTypeCommand}"
+                ImageSource="../../Assets/Icons/PNG_DarkGray/Switch On-100.png"
+                ToolTip="{x:Static resw:Resources.SwitchChartType}"
                 Height="56"
                 Width="56"
                 ImageHeight="28" 
