--- a/RepositoryParser/RepositoryParser/View/UsersActivityViews/UsersActivityCodeFrequency/UsersCodeFrequencyAddedChartView.xaml
+++ b/RepositoryParser/RepositoryParser/View/UsersActivityViews/UsersActivityCodeFrequency/UsersCodeFrequencyAddedChartView.xaml
@@ -7,6 +7,8 @@
              xmlns:metroChart="clr-namespace:De.TorstenMandelkow.MetroChart;assembly=De.TorstenMandelkow.MetroChart"
              xmlns:usersActivityCodeFrequency="clr-namespace:RepositoryParser.ViewModel.UserActivityViewModels.UsersActivityCodeFrequency"
              xmlns:conventers="clr-namespace:RepositoryParser.Conventers"
+             xmlns:enum="clr-namespace:RepositoryParser.Core.Enum;assembly=RepositoryParser.Core"
+             xmlns:enums="clr-namespace:RepositoryParser.Helpers.Enums"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300"
              d:DataContext="{d:DesignInstance usersActivityCodeFrequency:UsersAddedChartViewModel}"
@@ -15,7 +17,7 @@
     <UserControl.Resources>
         <conventers:CountOfRepositoriesToVisibilityConventer x:Key="CountOfRepositoriesToVisibilityConventer"/>
         <conventers:IntToLenghtConventer x:Key="IntToLenghtConventer"/>
-        <conventers:BoolToVisibilityConverter x:Key="BoolToVisibilityConverter"/>
+        <conventers:ChartTypeToVisibilityConventer x:Key="ChartTypeToVisibilityConventer"/>
     </UserControl.Resources>
     
     <Grid>
@@ -23,21 +25,50 @@
             <RowDefinition Height="*"/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
-        <ScrollViewer>
+        <!--Primary Chart-->
+        <ScrollViewer
+            Grid.Row="0"
+            Visibility="{Binding Path=CurrentChartType, 
+                                    Converter={StaticResource ChartTypeToVisibilityConventer}, 
+                                    ConverterParameter={x:Static enum:ChartType.Primary}}">
             <metroChart:StackedBar100Chart
-                            x:Name="ChartViewInstance"
-                            ChartTitle=""
-                            ChartSubTitle=""
-                            Padding="0"
-                            ChartBorderThickness="1"
-                            ChartMargin="0"
-                            Background="Transparent"
-                            ChartLegendVisibility="Collapsed"
-                            Palette="{StaticResource RepositoryAnalyserGradientPalette}"
-                            ClipToBounds="False"
-                            Height="{Binding CountOfAuthors, Converter={StaticResource IntToLenghtConventer}}"
-                            />
+                x:Name="ChartViewInstance"
+                ChartTitle=""
+                ChartSubTitle=""
+                Padding="0"
+                ChartBorderThickness="1"
+                ChartMargin="0"
+                Background="Transparent"
+                ChartLegendVisibility="Collapsed"
+                Palette="{StaticResource RepositoryAnalyserGradientPalette}"
+                ClipToBounds="False"
+                Height="{Binding CountOfAuthors, Converter={StaticResource IntToLenghtConventer}}"/>
         </ScrollViewer>
-        <metroChart:Legend Grid.Row="1" ItemsSource="{Binding ChartLegendItems}"/>
+        <!--Secondary Chart-->
+        <ScrollViewer
+            Grid.Row="0"
+            Visibility="{Binding Path=CurrentChartType, 
+                                    Converter={StaticResource ChartTypeToVisibilityConventer}, 
+                                    ConverterParameter={x:Static enum:ChartType.Secondary}}">
+            <metroChart:StackedBarChart
+                x:Name="ChartViewInstance2"
+                ChartTitle=""
+                ChartSubTitle=""
+                Padding="0"
+                ChartBorderThickness="1"
+                ChartMargin="0"
+                Background="Transparent"
+                ChartLegendVisibility="Collapsed"
+                Palette="{StaticResource RepositoryAnalyserGradientPalette}"
+                ClipToBounds="False"
+                Height="{Binding CountOfAuthors, Converter={StaticResource IntToLenghtConventer}}"/>
+        </ScrollViewer>
+        <!--Chart Legend-->
+        <metroChart:Legend 
+                        Visibility="{Binding Path=CurrentChartType, 
+                                                Converter={StaticResource ChartTypeToVisibilityConventer}, 
+                                                ConverterParameter={x:Static enum:ChartType.Primary}}"
+                        Grid.Row="1" 
+                        ItemsSource="{Binding ChartLegendItems}"/>
     </Grid>
 </UserControl>
